--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <resources>
     <string name="app_name">My Application</string>
     <!--activity_result-->
-    <string name="resultTitle">This Time Results</string>
+    <string name="resultTitle">This Time Result</string>
+    <string name="item1">No</string>
+    <string name="item2">judge</string>
+    <string name="item3">question</string>
+    <string name="item4">answer</string>
+    <string name="item5">input</string>
 </resources>
