--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -4,7 +4,7 @@
     <string name="resultTitle">今回の結果は</string>
     <string name="item1">No</string>
     <string name="item2">正誤</string>
-    <string name="item3">問題</string>
-    <string name="item4">答え</string>
-    <string name="item5">入力した答え</string>
+    <string name="item3">問題/答え</string>
+    <string name="item4">入力した答え</string>
+    <string name="btn1">終了する</string>
 </resources>
