--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -24,4 +24,5 @@
     <string name="level10">レベル10</string>
     <string name="start">スタート</string>
     <string name="custom">カスタム</string>
+    <string name="comingSoon">Coming Soon</string>
 </resources>
