--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,13 @@
     <string name="item2">judge</string>
     <string name="item3">question/answer</string>
     <string name="item4">input</string>
+    <!--activity_all_result-->
+    <string name="item5">question</string>
+    <string name="item6">answer</string>
+    <string name="item7">date</string>
+    <string name="item8">time</string>
     <string name="btn1">finish</string>
+    <string name="allResultTitle">Past Result</string>
     <!--activity_main-->
     <string name="addition">ADDITION(+)</string>
     <string name="subtraction">SUBTRACTION(-)</string>
@@ -23,6 +29,7 @@
     <string name="level9">Level9</string>
     <string name="level10">Level10</string>
     <string name="start">Start</string>
+    <string name="PastResultStart">PastResult</string>
     <string name="custom">Custom</string>
     <string name="comingSoon">Coming Soon</string>
 
