--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="PastResultStart">PastResult</string>
     <string name="custom">Custom</string>
     <string name="comingSoon">Coming Soon</string>
+    <string name="privacyPolicy">PrivacyPolicy</string>
     <!--activity_calcpage-->
     <string name="remainder">Remainder</string>
     <string name="returnToTop">TOP</string>
